--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,15 @@
 .App {
   text-align: center;
 }
+#grid-content{
+  max-width: 960px;
+  margin: 0 auto;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#grid-content div{
+  background: blue;
+  padding:30px;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#grid-content div:nth-child(odd){
+  background: red;
 }
