--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 #grid-content{
+  display: grid;
+  /* grid-template-columns: 33.3% 33.3% 33.3%;*/
+  /* grid-template-columns: 30% 20% 50%; */
+  /* grid-template-columns: 1fr 2fr 1fr; */
+  grid-template-columns: repeat(3,1fr);
+
   max-width: 960px;
   margin: 0 auto;
 
