--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 }
 #grid-content{
   display: grid;
+
   /* grid-template-columns: 33.3% 33.3% 33.3%;*/
   /* grid-template-columns: 30% 20% 50%; */
   /* grid-template-columns: 1fr 2fr 1fr; */
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(6,1fr);
 
   /* grid-column-gap: 10px; */
   /* grid-row-gap: 10px; */
@@ -15,7 +16,7 @@
   /* grid-auto-rows: 200px; */
   /* grid-auto-rows: minmax(200px,auto); */
   /* grid-template-rows: 200px 300px 400px; */
-  grid-template-rows: repeat(3,minmax(200px,auto));
+  grid-template-rows: repeat(4,minmax(150px,auto));
 
 
   max-width: 960px;
@@ -28,4 +29,27 @@
 }
 #grid-content div:nth-child(odd){
   background: red;
+}
+.one{
+  /* grid-column-start: 1; */
+  /* grid-column-end:3; */
+  grid-column: 1/3;
+}
+.two{
+  grid-column: 3/7;
+}
+.three{
+  grid-column: 1/4;
+  grid-row: 2/4
+}
+.four{
+  grid-column: 4/7;
+  grid-row: 2/4;
+}
+.five{
+  grid-column: 3/7;
+}
+.six{
+  grid-column: 1/3;
+  grid-row: 4;
 }
