--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,14 @@
   grid-column: 1/3;
   grid-row: 4;
 }
+.nested{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  grid-column: span 3;
+}
+.nested p {
+  border: 1px solid white;
+  padding:20px;
+  margin:0;
+}
