--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@
   max-width: 960px;
   margin: 0 auto;
 
+  /* align-items: start;
+  justify-items:start; */
+
 }
 #grid-content div{
   background: blue;
@@ -34,9 +37,17 @@
   /* grid-column-start: 1; */
   /* grid-column-end:3; */
   grid-column: 1/3;
+
+  justify-self:start;
+  align-self: end;
+
+
 }
 .two{
   grid-column: 3/7;
+
+  align-self: center;
+  justify-self: center;
 }
 .three{
   grid-column: 1/4;
