--- a/src/App.css
+++ b/src/App.css
@@ -3,49 +3,50 @@
 }
 #grid-content{
   display: grid;
+  max-width: 960px;
+  margin: 0 auto;
 
   /* grid-template-columns: 33.3% 33.3% 33.3%;*/
   /* grid-template-columns: 30% 20% 50%; */
   /* grid-template-columns: 1fr 2fr 1fr; */
-  grid-template-columns: repeat(6,1fr);
-
+  /* -----------------------------------------below is how to use  repeat */
+  /* grid-template-columns: repeat(6,1fr); */
+/* -------------------------------------------- */
   /* grid-column-gap: 10px; */
   /* grid-row-gap: 10px; */
-  grid-gap: 10px;
-
+  /* -----------------------------------------below is column and row combined */
+  /* grid-gap: 10px; */
+/* -------------------------------------------- */
   /* grid-auto-rows: 200px; */
   /* grid-auto-rows: minmax(200px,auto); */
   /* grid-template-rows: 200px 300px 400px; */
-  grid-template-rows: repeat(4,minmax(150px,auto));
-
-
-  max-width: 960px;
-  margin: 0 auto;
-
+  /*----------------------------------------- below is using the repeat but for rows  */
+  /* grid-template-rows: repeat(4,minmax(150px,auto)); */
+  /* ----------------------------------------below is if i want every item in grid align or justified */
   /* align-items: start;
   justify-items:start; */
 
 }
-#grid-content div{
+#grid-content > *{
+  background: lightblue;
+  padding: 30px;
+}
+/* #grid-content div{
   background: blue;
   padding:30px;
-}
-#grid-content div:nth-child(odd){
+} */
+/* #grid-content div:nth-child(odd){
   background: red;
-}
+} */
 .one{
   /* grid-column-start: 1; */
   /* grid-column-end:3; */
   grid-column: 1/3;
-
   justify-self:start;
   align-self: end;
-
-
 }
 .two{
   grid-column: 3/7;
-
   align-self: center;
   justify-self: center;
 }
